# gibberish

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  test_local_sync.py
gibberish/: __init__.py  gibberish_cli.py
src/gibberish/: audio.py  baseline.py  gibberish_cli.py  interactive.py  llm.py  protocol.py  sync.py  tree_viz.py
