[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gibberish"
version = "0.1.0"
description = "Acoustic file synchronization using ggwave for air-gapped data transmission"
authors = [
    {name = "Gibberish Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
    # ggwave>=0.4.2 - Will be installed separately in Task 2 (requires compilation)
    "xxhash>=3.4.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
    "ollama>=0.1.0",
    "rich>=13.0.0",
    # librsync - Will be added when implementing binary diff (Task 5)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
gibberish = "gibberish.gibberish_cli:main"

[project.urls]
Homepage = "https://github.com/gibberish/gibberish"
Repository = "https://github.com/gibberish/gibberish"
Issues = "https://github.com/gibberish/gibberish/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gibberish*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=gibberish --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
